[gd_scene load_steps=3 format=3 uid="uid://biga7pyc5skp3"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/TimelineItem/TransitionsModal/TransitionItem/TransitionItem.gd" id="1_ubrch"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxy00"]
bg_color = Color(0.168627, 0.168627, 0.168627, 0.631373)

[node name="TransitionItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubrch")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TransitionCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Transition Enabled"

[node name="SwipeButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Swipe"

[node name="SwipeHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
clip_contents = true
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="SwipeHorizontalCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox/MarginContainer"]
layout_mode = 2
text = "Horizontal"

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="SwipeHSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 9
text = "Min: "
vertical_alignment = 1

[node name="SwipeMinH" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -100000.0
max_value = 100000.0

[node name="Label3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 9
text = "Max: "
vertical_alignment = 1

[node name="SwipeMaxH" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -100000.0
max_value = 100000.0

[node name="Label4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 9
text = "Offset: "
vertical_alignment = 1

[node name="SwipeOffsetH" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100000.0
max_value = 100000.0

[node name="SwipeVBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="SwipeVerticalCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox/MarginContainer"]
layout_mode = 2
text = "Vertical     "

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="SwipeVSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
text = "Min: "
vertical_alignment = 1

[node name="SwipeMinV" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -100000.0
max_value = 100000.0

[node name="Label3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
text = "Max: "
vertical_alignment = 1

[node name="SwipeMaxV" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -100000.0
max_value = 100000.0

[node name="Label4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
text = "Offset: "
vertical_alignment = 1

[node name="SwipeOffsetV" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100000.0
max_value = 100000.0

[node name="ScaleButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Scale
"

[node name="ScaleHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="SwipeHorizontalCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox/MarginContainer"]
layout_mode = 2
text = "Enabled"

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="ScaleHSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
text = "Min: "
vertical_alignment = 1

[node name="SwipeMinH" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -100000.0
max_value = 100000.0
step = 0.01

[node name="Label3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
text = "Max: "
vertical_alignment = 1

[node name="SwipeMaxH" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -100000.0
max_value = 100000.0
step = 0.01

[node name="Label4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
text = "Offset: "
vertical_alignment = 1

[node name="SwipeOffsetH" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100000.0
max_value = 100000.0
step = 0.01

[node name="ShakeButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Shake"

[node name="ShakeHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="ShakeH" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox/MarginContainer"]
layout_mode = 2
text = "Horizontal"

[node name="ShakeV" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
text = "Vertical     "

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="ShakeHSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
size_flags_horizontal = 11
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
text = "Size: "
vertical_alignment = 1

[node name="ShakeSize" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
size_flags_horizontal = 11
max_value = 100000.0
step = 0.1

[node name="Label3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
text = "Time:"
vertical_alignment = 1

[node name="ShakeTime" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 0.01

[node name="BlendButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Blend
"

[node name="BlendHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/BlendHBox"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="BlendEnabled" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/BlendHBox/MarginContainer"]
layout_mode = 2
text = "Enabled"

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/BlendHBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="BlendSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/BlendHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="FadeButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Fade Color
"

[node name="FadeHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="FadeFrom" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox/MarginContainer"]
layout_mode = 2
text = "From"

[node name="FadeTo" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox"]
layout_mode = 2
text = "To    "

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="FadeSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox"]
layout_mode = 2
text = "Color: "
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox"]
custom_minimum_size = Vector2(80, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="SlideButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Slide"

[node name="SlideHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="SlideHCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox/MarginContainer"]
layout_mode = 2
text = "Horizontal"

[node name="SlideVCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox"]
layout_mode = 2
text = "Vertical"

[node name="SlideReverse" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox"]
layout_mode = 2
text = "Reverse"

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox"]
layout_mode = 2
text = "Speed: "
vertical_alignment = 1

[node name="SlideSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="CurtainButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Curtain"

[node name="CurtainHBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="CurtainHCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/MarginContainer"]
layout_mode = 2
text = "Horizontal"

[node name="CurtainVCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
text = "Vertical"

[node name="CurtainHReverse" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
text = "Reverse H"

[node name="CurtainVReverse" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
text = "Reverse V"

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
text = "Speed H: "
vertical_alignment = 1

[node name="SwipeHSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
text = "Speed V: "
vertical_alignment = 1

[node name="SwipeVSpeed" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 31

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fxy00")

[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/TransitionCheckbox" to="." method="_on_transition_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeButton" to="." method="_on_swipe_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox/MarginContainer/SwipeHorizontalCheckbox" to="." method="_on_swipe_horizontal_checkbox_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox/SwipeHSpeed" to="." method="_on_swipe_h_speed_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox/SwipeMinH" to="." method="_on_swipe_min_h_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox/SwipeMaxH" to="." method="_on_swipe_max_h_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeHBox/SwipeOffsetH" to="." method="_on_swipe_offset_h_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox/MarginContainer/SwipeVerticalCheckbox" to="." method="_on_swipe_vertical_checkbox_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox/SwipeVSpeed" to="." method="_on_swipe_v_speed_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox/SwipeMinV" to="." method="_on_swipe_min_v_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox/SwipeMaxV" to="." method="_on_swipe_max_v_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SwipeVBox/SwipeOffsetV" to="." method="_on_swipe_offset_v_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/ScaleButton" to="." method="_on_scale_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox/MarginContainer/SwipeHorizontalCheckbox" to="." method="_on_scale_checkbox_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox/ScaleHSpeed" to="." method="_on_scale_h_speed_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox/SwipeMinH" to="." method="_on_scale_min_h_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox/SwipeMaxH" to="." method="_on_scale_max_h_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ScaleHBox/SwipeOffsetH" to="." method="_on_scale_offset_h_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/ShakeButton" to="." method="_on_shake_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox/MarginContainer/ShakeH" to="." method="_on_shake_h_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox/ShakeV" to="." method="_on_shake_v_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox/ShakeHSpeed" to="." method="_on_shake_h_speed_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox/ShakeSize" to="." method="_on_shake_size_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ShakeHBox/ShakeTime" to="." method="_on_shake_time_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/BlendButton" to="." method="_on_blend_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/BlendHBox/MarginContainer/BlendEnabled" to="." method="_on_blend_enabled_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/BlendHBox/BlendSpeed" to="." method="_on_blend_speed_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/FadeButton" to="." method="_on_fade_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox/MarginContainer/FadeFrom" to="." method="_on_fade_from_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox/FadeTo" to="." method="_on_fade_to_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox/FadeSpeed" to="." method="_on_fade_speed_value_changed"]
[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/FadeHBox/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SlideButton" to="." method="_on_slide_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox/MarginContainer/SlideHCheckbox" to="." method="_on_slide_h_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox/SlideVCheckbox" to="." method="_on_slide_v_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox/SlideReverse" to="." method="_on_slide_reverse_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SlideHBox/SlideSpeed" to="." method="_on_slide_speed_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainButton" to="." method="_on_curtain_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/MarginContainer/CurtainHCheckbox" to="." method="_on_curtain_h_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/CurtainVCheckbox" to="." method="_on_curtain_v_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/CurtainHReverse" to="." method="_on_curtain_h_reverse_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/CurtainVReverse" to="." method="_on_curtain_v_reverse_toggled"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/SwipeHSpeed" to="." method="_on_curtain_h_speed_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/CurtainHBox/SwipeVSpeed" to="." method="_on_curtain_v_speed_value_changed"]
